...
      child: Row(
        children: [
          Expanded(
            child: Column(
              children: [
                TextField(
                  key: const Key('add_todo_input'),
                  keyboardType: TextInputType.text,
                  controller: titleController,
                  decoration:
                      InputDecoration(hintText: 'todo'.tr()), // Localized hint
                ),
              ],
            ),
          ),
          IconButton(
            key: const Key('add_todo_button'),
            icon: const Icon(Icons.add),
            onPressed: () async {
              if (titleController.text.isNotEmpty) {
                await _addNewTodo(
                    context, titleController.text, descriptionController.text);
                titleController.clear();
...
