...
            child: Material(
              elevation: 2.0, // Adds a slight shadow to give a card-like effect
              borderRadius: BorderRadius.circular(10.0),
              color: Colors.white, // Ensures visibility against any background
              child: ListTile(
                leading: Checkbox(
                  key: const Key("todo_checkbox"),
                  value: widget.todo.isCompleted,
                  onChanged: (value) {
                    setState(() {
                      widget.onToggleCompletion();
                      if (widget.todo.isCompleted) {
                        _animationController.forward();
...
